src/test/deca/syntax/valid/AvecObjet/ThisTest.deca
//Description
//  test de this
//
//Résultat
//  ok

class A {
    int x;
    void setX(int a) {
        this.x = a;
    }
}